[package]
name = "middleman"
version = "0.1.0"
authors = ["Niclas Rosengren <niclas.rosengren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = "0.3.0-alpha.19"
warp = "0.1.20"




[dev-dependencies]
tokio = "0.2.0-alpha.6"
