[package]
name = "enande"
version = "0.1.0"
authors = ["Niclas Rosengren <niclas.rosengren@gmail.com>"]
edition = "2018"
license = "MIT"
description = """
A library that makes it quicker to compose many different types of streams 
into a single handler with a possible output.
"""
documentation = "https://docs.rs/enande"


[dependencies]
futures-preview = "0.3.0-alpha.19"


[dev-dependencies]
tokio = "0.2.0-alpha.6"
