[package]
name = "enande"
version = "0.2.0"
authors = ["Niclas Rosengren <niclas.rosengren@gmail.com>"]
edition = "2018"
license = "MIT"
description = """
A library that makes it quicker to compose many different types of streams 
into a single handler with a possible output.
"""
documentation = "https://docs.rs/enande"


[dependencies]
futures-preview = { version = "0.3.0-alpha.19", default-features = false, features = [ "alloc" ] }


[dev-dependencies]
tokio = "0.2.0-alpha.6"
futures-preview = { version = "0.3.0-alpha.19", default-features = true }
